Update pom.xml
- added guice
- upgraded maven version